2004-02-02  David Schleef  <ds@schleef.org>

	Change usage of isblah() to g_ascii_isblah() to be more locale
	independent.  (#133076)
	* gst/gsturi.c: (gst_uri_protocol_check_internal):
	* gst/gstutils.c:
	* gst/parse/parse.l:

2004-02-02  Jon Trowbridge  <trow@gnu.org>

	reviewed by: David Schleef  <ds@schleef.org>

	Fix memory leaks:
	* gst/gstcaps.c: (gst_caps_to_string):
	* gst/registries/gstxmlregistry.c:
	(gst_xml_registry_add_path_list_func),
	(gst_xml_registry_parse_padtemplate):

2004-02-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.c: (gst_element_default_error):
          suffix error messages with period

2004-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstfilesrc.c: (gst_filesrc_open_file):
	* gst/elements/gstmultidisksrc.c: (gst_multidisksrc_open_file):
	* gst/gsterror.c: (gst_error_get_message):
          Suffix with dots
	* po/fr.po:
	* po/nl.po:
          Update translation files

2004-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/autoplug/gstspideridentity.c:
	(gst_spider_identity_sink_loop_type_finding):
	* gst/elements/gstfakesink.c: (gst_fakesink_change_state):
	* gst/elements/gstfilesink.c: (gst_filesink_open_file),
	(gst_filesink_close_file), (gst_filesink_handle_event),
	(gst_filesink_chain):
	* gst/elements/gstfilesrc.c: (gst_filesrc_map_region),
	(gst_filesrc_get_read), (gst_filesrc_open_file):
	* gst/elements/gstidentity.c: (gst_identity_chain):
	* gst/elements/gstmultidisksrc.c: (gst_multidisksrc_open_file):
	* gst/elements/gstpipefilter.c: (gst_pipefilter_get),
	(gst_pipefilter_chain), (gst_pipefilter_open_file):
	* gst/elements/gsttypefind.c: (gst_type_find_element_chain):
	* gst/gsterror.c: (_gst_core_errors_init),
	(_gst_library_errors_init), (_gst_resource_errors_init),
	(_gst_stream_errors_init), (gst_error_get_message):
	* gst/gstpad.c: (gst_pad_set_explicit_caps),
	(gst_pad_recover_caps_error), (gst_pad_pull):